tests/ui/specialization/min_specialization/bad-const-wf-doesnt-specialize.stderr
error[E0119]: conflicting implementations of trait `Copy` for type `S<_>`
  --> $DIR/bad-const-wf-doesnt-specialize.rs:10:1
   |
LL | impl<const N: i32> Copy for S<N> {}
   | -------------------------------- first implementation here
LL |
LL | impl<const M: usize> Copy for S<M> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `S<_>`

error[E0308]: mismatched types
  --> $DIR/bad-const-wf-doesnt-specialize.rs:8:31
   |
LL | impl<const N: i32> Copy for S<N> {}
   |                               ^ expected `usize`, found `i32`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0119, E0308.
For more information about an error, try `rustc --explain E0119`.
